--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         比較有系統性,不過一開始不知道怎麼挑選課程,選了一個技術比較古老的全英語課程,導致學起來有點吃力
         到後來找到比較適合我的中文課程,從前端最基礎三本柱:Html css JavaScript ,到進階的react前端框架
 
-        並嘗試以上述技術製作簡單的Js小遊戲網站,以及前端購物車網站,遇到不會的問題嘗試自己從stack overfiow尋找問題的答案。
+        並嘗試以上述技術製作簡單的Js小遊戲網站,以及前端購物車網站,遇到不會的問題嘗試自己從stackoverflow尋找問題的答案。
         以下是我的練習作品
 <br>
         1 : <a href="https://reurl.cc/QX6Ga2">翻牌釣魚小遊戲</a>
