--- a/index.html
+++ b/index.html
@@ -50,8 +50,24 @@
         我很珍惜這些能夠使用的有限時間,用來額外加強自己的弱項。
     </p>
     </div>
+
+
+
     <div>
-    <h2>4.請描述一件讓你產生明顯負面情緒的事情,你如何處理該情緒？</h2>
+    <h2>4.是否有想要加入的軟體公司？為什麼想加入該公司？</h2>
+    <hr>
+        <p>
+            1.Dcard _狄卡科技股份有限公司 : 公司年輕有活力,也是知名大型社群網站 
+若能夠持續努力經營維持其領先的龍頭地位,在台灣會是有發展潛力的公司。
+<br>
+2.幣託科技有限公司台灣分公司 : 在台灣是知名的虛擬貨幣交易公司,在新興的虛擬貨幣交易市場能夠取得先行者優勢 
+也有發展的潛力,若是有幸進入幣托還能夠學習到更多區塊鍊等相關知識。
+        </p>
+
+
+    </div>
+    <div>
+    <h2>5.請描述一件讓你產生明顯負面情緒的事情,你如何處理該情緒？</h2>
     <hr>
     <p>
 
@@ -61,7 +77,7 @@
     </p>
     </div>
     <div>
-    <h2>5.關於這份申請網頁,請分享一個你開發時的技術心得。 </h2>
+    <h2>6.關於這份申請網頁,請分享一個你開發時的技術心得。 </h2>
     <hr>
     
         <p>
@@ -81,7 +97,7 @@
     </div>
 
     <div>
-    <h2>6.從上次提出申請至今,多做了哪些努力？( 第一次申請不用回答 )</h2>
+    <h2>7.從上次提出申請至今,多做了哪些努力？( 第一次申請不用回答 )</h2>
     <hr>
         <p> 自從上次申請後,我開始著手嘗試製作自己的side project,但是要製作比較進階的功能時
             我才意識到我的JavaScript底子實在不足,以至於要修改新增新功能都做不出來,於是回到最基礎的Js重頭開始複習
@@ -93,7 +109,7 @@
 
     <div>
     <h2>
-       7.其他想要對我們說的事情？
+       8.其他想要對我們說的事情？
     </h2>
     <hr>
   
